--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:theme="@style/Theme.Remote_control"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".login"
             android:exported="false" />
         <activity
-            android:name=".spscreenactivity"
+            android:name=".signup"
             android:exported="false" />
         <activity
             android:name=".splashscreen2activity"
@@ -27,7 +27,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
+    </activity>
 
         <meta-data
             android:name="preloaded_fonts"
